Bug 47079 - [4.6 Regression] FAIL: gcc.dg/guality/nrv-1.c
Summary: [4.6 Regression] FAIL: gcc.dg/guality/nrv-1.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Alexandre Oliva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-28 18:13 UTC by H.J. Lu
Modified: 2011-01-19 22:06 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-12-28 21:30:43


Attachments
Patch that fixes the problem (912 bytes, patch)
2010-12-28 23:04 UTC, Alexandre Oliva
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-12-28 18:13:58 UTC
On Linux/ia32, revision 168160:

http://gcc.gnu.org/ml/gcc-cvs/2010-12/msg00845.html

caused:

FAIL: gcc.dg/guality/nrv-1.c  -O1  line 20 a2.i[0] == 42
FAIL: gcc.dg/guality/nrv-1.c  -O2  line 20 a2.i[0] == 42
FAIL: gcc.dg/guality/nrv-1.c  -Os  line 20 a2.i[0] == 42
Comment 1 Alexandre Oliva 2010-12-28 21:30:43 UTC
Mine
Comment 2 Alexandre Oliva 2010-12-28 23:04:39 UTC
Created attachment 22863 [details]
Patch that fixes the problem

Here's the patch that I'm testing.
Comment 3 Alexandre Oliva 2011-01-19 22:00:08 UTC
Author: aoliva
Date: Wed Jan 19 22:00:00 2011
New Revision: 169034

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=169034
Log:
PR debug/47079
PR debug/46724
* function.c (instantiate_expr): Instantiate incoming rtl of
implicit arguments, and recurse on VALUE_EXPRs.
(instantiate_decls): Instantiate rtl and VALUE_EXPR of result.
* var-tracking.c (adjust_mems): Reject virtual_incoming_args_rtx.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/function.c
    trunk/gcc/var-tracking.c
Comment 4 Alexandre Oliva 2011-01-19 22:06:35 UTC
Fixed