PR debug/47079 PR debug/46724 * function.c (instantiate_expr): Instantiate incoming rtl of implicit arguments, and recurse on VALUE_EXPRs. (instantiate_decls): Instantiate rtl and VALUE_EXPR of result. * var-tracking.c (adjust_mems): Reject virtual_incoming_args_rtx.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169034 138bc75d-0d04-0410-961f-82ee72b054a4